tests/fail/struct_attr_3.rs
use salak::*;

#[derive(Debug, FromEnvironment)]
#[salak(desc = "xxx")]
pub struct FailEnum {}

fn main() {}
